# remote_controller

./: .gitignore  Cargo.toml  LICENSE
backend/: Cargo.toml
client/: Cargo.toml
client/SmtcControl/: SmtcControl.sln
client/SmtcControl/SmtcControl/: SmtcControl.vcxproj  main.cpp  readme.txt
client/TrayWrapper/: TrayWrapper.sln
client/TrayWrapper/TrayWrapper/: Program.cs  TrayApplicationContext.cs  TrayWrapper.csproj  config.json
client/TrayWrapper/TrayWrapper/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
resources/: config.toml  index.html
resources/backend/: config.toml
resources/client/: config.toml
resources/html/: device_control.html  index.html  login.html
resources/html/resources/: manifest.json
