[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3.0"
bcrypt = "0.15.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
toml = "0.8.0"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.31"
lazy_static = "1.4.0"
tokio-stream = "0.1.14"
futures-util = "0.3.28"
rdev = "0.5.3"
which = "4.4.2"
tokio-tungstenite = "0.20.0"
url = "2.4.1"

[[bin]]
name = "backend"
path = "src/backend/bin/backend.rs"

[[bin]]
name = "editor"
path = "src/backend/bin/edit_db.rs"

[[bin]]
name = "client"
path = "src/client/bin/client.rs"
