[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1.14"
futures-util = "0.3.28"
rdev = "0.5.3"
which = "4.4.2"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
url = "2.4.1"

[[bin]]
name = "client"
path = "src/bin/client.rs"
